<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rescue Me</string>
    <string name="action_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="refresh">Refresh</string>
    
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone Number</string>
    
    <string name="logo">Rescue Me</string>
    <string name="register_button">Register</string>
    <string name="friends_button">Friends</string>
    <string name="emergency_button">Emergency</string>
    <string name="false_alarm_button">False Alarm</string>
    <string name="camera_button">Camera</string>
    <string name="confirm_button">Confirm</string>
    
    <string name="count_down">Countdown</string>
    <string name="help_coming">Help is on the way!</string>
    
    <string name="enter_valid_name">Please enter a valid name!</string>
    <string name="enter_valid_email_id">Please enter a valid gmail id!</string>
    <string name="enter_valid_number">Please enter a valid 10 digit phone number!</string>
    
    <string name="update_failed">Updating contacts failed</string>

</resources>
