<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan" >

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />
    
    <ImageButton
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:layout_alignRight="@id/phone_number"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/vertical_gap"
        android:background="#00000000"
        android:contentDescription="@string/register_button"
        android:src="@drawable/register" />
    
    <EditText
        android:id="@+id/email_id"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/phone_number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/name"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/email_id"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/name"
        android:inputType="textEmailAddress" >
        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/logo_padding_bottom"
        android:layout_marginRight="@dimen/logo_padding_right"
        android:background="#00000000"
        android:contentDescription="@string/logo"
        android:src="@drawable/title" />

</RelativeLayout>