<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan" >

    <ImageButton
        android:id="@+id/emergencyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/vertical_gap"
        android:background="#00000000"
        android:contentDescription="@string/emergency_button"
        android:src="@drawable/emergency" />

    <ImageButton
        android:id="@+id/friendsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/emergencyButton"
        android:background="#00000000"
        android:contentDescription="@string/friends_button"
        android:src="@drawable/friends" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/vertical_gap"
        android:layout_below="@id/emergencyButton"
        android:background="#00000000"
        android:contentDescription="@string/camera_button"
        android:src="@drawable/camera" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/logo_padding_bottom"
        android:layout_marginRight="@dimen/logo_padding_right"
        android:background="#00000000"
        android:contentDescription="@string/logo"
        android:src="@drawable/title" />

</RelativeLayout>