<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red" >

    <TextView
        android:id="@+id/countDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="50sp"
        android:layout_marginTop="20dp"
        android:background="#00000000" />

    <ImageButton
        android:id="@+id/falseAlarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/countDown"
        android:layout_marginRight="15dp"
        android:background="#00000000"
        android:contentDescription="@string/false_alarm_button"
        android:src="@drawable/false_alarm" />

    <ImageButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/countDown"
        android:layout_marginLeft="15dp"
        android:background="#00000000"
        android:contentDescription="@string/confirm_button"
        android:src="@drawable/confirm" />
    
    <TextView 
        android:id="@+id/helpComing"
        android:text="@string/help_coming"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/countDown"
        android:visibility="invisible"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/vertical_gap"
        android:layout_below="@id/helpComing"
        android:background="#00000000"
        android:contentDescription="@string/camera_button"
        android:src="@drawable/camera" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/logo_padding_bottom"
        android:layout_marginRight="@dimen/logo_padding_right"
        android:contentDescription="@string/logo"
        android:src="@drawable/title" />

</RelativeLayout>